@@ -1,9 +1,12 @@
 DIST a52dec-0.7.4-handbrake-0.9.5_p4039.tar.gz 242978 RMD160 5f8ff682a43ffdafdb88a4231bfa64bb40f138d8 SHA1 7c406b9b5351cdec56279b6d02f3f556711424d2 SHA256 54981ab08fc09a675b9924372cf0cca5aa5363b918c4c19065c2d40e2858be47
+DIST a52dec-0.7.4-handbrake-0.9.5_p4210.tar.gz 242978 RMD160 5f8ff682a43ffdafdb88a4231bfa64bb40f138d8 SHA1 7c406b9b5351cdec56279b6d02f3f556711424d2 SHA256 54981ab08fc09a675b9924372cf0cca5aa5363b918c4c19065c2d40e2858be47
 DIST faac-1.28.tar.gz 678891 RMD160 03902393488f04223aabdc804bfe77bb32a61c94 SHA1 d00b023a3642f81bb1fb13d962a65079121396ee SHA256 c5141199f4cfb17d749c36ba8cfe4b25f838da67c22f0fec40228b6b9c3d19df
 DIST ffmpeg-git-v0.7b2-406-g7b20d35.tar.bz2 4091754 RMD160 e8a401a83cb1917f7eb3eb6569bd2185a2dae8b2 SHA1 f12a3f01d09d81f8575dbe93eaad2da15b8c8435 SHA256 7a2019ed1fb04c73d4af8b56d7668b1eab4278597f18d69136c061f2790c98bc
+DIST ffmpeg-v0.7.1.tar.bz2 4108177 RMD160 77b9585c058f3117543b9a484eb1d2d2a082567d SHA1 4f25e9fcd7b4bccdad7b0a737bc9ce74fc65b794 SHA256 242cb92570ad61b9c0aac33383b78dd589e4e0882cd5b7d6fde2cf012791ab05
 DIST fontconfig-2.8.0.tar.gz 1548409 RMD160 fefee412cad4fa71b573e997e14f1df12f439be2 SHA1 570fb55eb14f2c92a7b470b941e9d35dbfafa716 SHA256 fa2a1c6eea654d9fce7a4b1220f10c99cdec848dccaf1625c01f076b31382335
 DIST freetype-2.3.9.tar.gz 1809558 RMD160 97fcb0fa731f5e0f279f22f7d49fadf5b79a196e SHA1 2c82a4f87b076c13d878129c8651645803585ff4 SHA256 3c3fc489c75af93e9f4367951114b0274bddef60d70ffe419b7e22cda210b9c0
 DIST handbrake-0.9.5_p4039.tar.bz2 3117911 RMD160 ea5e4697f687bbc4e87f410578d665950290794f SHA1 b64d2664d5c130a32a92e039a119ed21175a1047 SHA256 fc58187c8358338de0b9f449533e048f5c2f36abb90495d71ae9522690fea142
+DIST handbrake-0.9.5_p4210.tar.bz2 3266204 RMD160 895b218e8516894e615f078f1cdab527c3025314 SHA1 1b272d960028f1a59225694cb1b651cd56a4c25c SHA256 31876cc7f76d38976336f83182a5c4f1f7c3f6a0ca5ce33d9dc766f8aec87053
 DIST lame-3.98.tar.gz 1411318 RMD160 c10c20128622e16f9cac3d346bea8e390e4bfdc5 SHA1 2908edcf0628512c407aadad317866826c6df5c7 SHA256 40235e84dfe4760ad3f352590a64b7bda1502a386c97d06229df356426e37686
 DIST libass-0.9.9.tar.bz2 280779 RMD160 a9b535ebab05ee8c30363c207fe736c36ac1c378 SHA1 e95923d7833f9ec8aa4f826a6fe113ea30404ad5 SHA256 aa2df48567ec60ff05456419c723bcf5f5686fa54282cd20a2ffc26c9831858b
 DIST libbluray-0.0.1-pre-213-ga869da8.tar.gz 241927 RMD160 77ea3b642fa1b58fe3acef32ee457173586ed403 SHA1 760bee28398c89b52942f771f6087e2b32af2c65 SHA256 4aa7127201a5d3d4148d99c37c7701ede6e0707456dacc8a59464dc68e231b76
@@ -19,5 +22,7 @@ DIST libxml2-2.7.7.tar.gz 4868502 RMD160 9f72c778c3e9e348a68eada0cf624c012658c08
 DIST mp4v2-trunk-r355.tar.bz2 475488 RMD160 cc942dd7f20bb943cccfd9443694ebbd63558818 SHA1 18a10807c5a05e0361e77d126599f8717ad7c8f5 SHA256 5b7d4e62df506b1246463da82cc2f02415eb462e6ccd5848f98f5cdcfc1f3d4f
 DIST mpeg2dec-0.5.1.tar.gz 522405 RMD160 3986798a30b33e689b1d7c5390380c13b74f8c76 SHA1 c39a95d18e133cd81e890fd7672f592ed41fadfc SHA256 161539061aa89864968a5150ed6c6a028a830c4868f7dd7c500732baef47fb71
 DIST x264-r1995-c1e60b9.tar.gz 608626 RMD160 e7bf926f9bd5e5d62cd61d5a814593e879bb9686 SHA1 0dbdc0c2875172d89318a7a2f0144d403dc56eb3 SHA256 5c5936ea57d4618f0d27a11253fc2cd9cd4eb4111f84e3d7d979c94f779325dc
+DIST x264-r2044-392e762.tar.gz 618603 RMD160 7554ae6ed2958540cf45ad03ef24216220b3ffa9 SHA1 8502bf76dfcd388e8d5e9c8e7ff58c4e98247c90 SHA256 748fff595a02a71b4454846df4d098ba34c78568576dd4f60b0aabeccbd25732
 EBUILD handbrake-0.9.5_p4039.ebuild 2584 RMD160 64921e0c9b2365756747f7a0822dd01918169a0a SHA1 6d8ff06ab711ce19303007a12879be3308a9595b SHA256 680fcf1461b72eb1f78e3df193378b945c3675a443063d3af96f6beb092b66b3
-MISC ChangeLog 613 RMD160 bc70d6ba703d1307c1e00b841a2379282fe5b7bd SHA1 745b1b4eb6b1eb2cfc9c9633fa1eed70d034ebc5 SHA256 c0c8297b747b0573ac140706cd4ce7657df7951c64a8c947160d5b529ee01ade
+EBUILD handbrake-0.9.5_p4210.ebuild 2567 RMD160 d3ed93f2d032ade3f4e4c662f9220b6b892ab98b SHA1 d91a775662f025e737685d0ca51574a4e4cb0c5c SHA256 c602004e92e801bd98fc057b92956a64c6121b4d8bb5972461c9bebc721303a8
+MISC ChangeLog 745 RMD160 cc7db82054339beaef962ddef752fb9b321e373f SHA1 3b50beb4385c31ad487a4e5ff50f49b21c1aede2 SHA256 bc894c2ac5a16f189219b61a7a71b28881a82265ea79bfe842e1b94da232b483
