@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*handbrake-0.9.5_p4210 (09 Sep 2011)
+
+  09 Sep 2011; Steve Dibb <beandog@gentoo.org> +handbrake-0.9.5_p4210.ebuild:
+  Version bump
+
   15 Jun 2011; Steve Dibb <beandog@gentoo.org> handbrake-0.9.5_p4039.ebuild:
   Remove hal dependency
 
